--- a/src/style.css
+++ b/src/style.css
@@ -155,8 +155,8 @@ button:focus {
 }
 
 .logo {
-  height: 1.4em !important;
-  width: 2.5em !important;
+  height: 80px !important;
+  width: 120px !important;
 }
 
 .navbar-nav .nav-link {
